# ML-Specialist-Roadmap

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
01_course_notes/effective-python/: README.md
01_course_notes/ng-ml-spec/: 2025_10_19_Supervised Machine Learning - Regression and Classification.md  2025_11_16_Logistic_Regression.md
01_notebooks/: 2025_11_08_feature_scaling_and_learning_rate.ipynb
01_notebooks/ng-ml-spec/: 2025_11_16_Logistic_regression.ipynb
02_papers/: paper-log.md
03_projects/: .gitkeep
04_templates/project_template/: README.md
notebooks/effective-python/: README.md  Rozdzial-I-programowanie-zgodnie-z-duchem-python.ipynb
notebooks/ng-ml-spec/: 2025_11_08_Linear_Regression.ipynb  2025_11_16_Logistic_Regression.ipynb
scripts/: README.md  create_course_note.py
